<resources>
    <string name="app_name">图片文字识别助手</string>
    <string name="rate_us">点个赞</string>
    <!--Feedback-->
    <string name="feedback_title">反馈</string>
    <string name="feedback_type">请选择反馈类型</string>
    <string name="feedback_contact">请留下邮箱作为联系方式</string>
    <string name="feedback_tag_others">其它</string>
    <string name="feedback_tag_bug">功能反馈</string>
    <string name="feedback_tag_language">应用文案问题</string>
    <string name="feedback_tag_ui">用户交互问题</string>
    <string name="feedback_suggestion">请给我们建议，帮助我们更好的优化应用！</string>
    <string name="feedback_send_tip">请填写一下反馈内容吧！</string>
    <string name="feedback_email_empty">请填写一下邮箱地址！</string>
    <string name="feedback_email_invalid">无效的邮箱地址！</string>
    <string name="feedback_send_failed">请检查一下网络，稍后再试！</string>
    <string name="feedback_send_success">提交成功啦！</string>
    <string name="feedback_send">发送</string>

    <string name="getphoto_too_big">对不起，没有足够内存来加载照片，请释放一些内存，重新进入应用后再试！</string>
    <string name="main_activity_takephoto_tip">对不起获取照片失败，请重试！</string>

    <!--album-->
    <string name="album_title">相册</string>

    <string name="main_activity_select_photo">请选择需要识别的图片，并去除识别内容以外的内容，以免造成识别误差！</string>
    <string name="main_activity_ocr_count">剩余识别次数：</string>
    <string name="main_get_ocr_count_free">免费获取次数</string>

    <!--主页-->
    <string name="main_select_image_again">重选</string>
    <string name="main_deal_image_again">剪裁</string>
    <string name="main_translate_image_again">识别</string>
    <string name="main_get_free">领取</string>
    <string name="main_ad">广告</string>
    <string name="main_translate_copy">复制</string>
    <string name="main_translate_share">分享</string>
    <string name="main_out_tip">再按一次退出</string>
    <string name="main_coyp_success">成功复制到剪贴板</string>
    <string name="main_coyp_tip">单击文字可以编辑\n长按文字可以自由复制\n(点击消失)</string>
    <string name="main_change_mode_tip">左右滑动空白区域\n可以切换识别模式\n(点击消失)</string>
    <string name="main_bank_num">卡号：</string>
    <string name="main_bank_bank">银行卡：</string>
    <string name="main_net_error">请检查网络是否连接！</string>
    <string name="main_all_stop">处理人数过多，请稍后再试！</string>
    <string name="main_ad_watch">抱歉！识别次数已用完。您可以领取免费次数或通过广告获取次数。</string>
    <string name="main_all_count">抱歉！识别用户过多，请稍后再试！</string>
    <string name="main_photo_select_tip_title">照片选取说明</string>
    <string name="main_photo_select_tip_content01">1.请选取亮度较好的图片。</string>
    <string name="main_photo_select_tip_content02">2.请选择清晰度较好的图片。</string>
    <string name="main_photo_select_tip_content03">3.请将尽量将识别文字以外的文字排除。</string>
    <string name="main_photo_select_tip_content04">参考以上规则可提高识别度！</string>
    <string name="main_photo_select_tip_close">关闭</string>
    <string name="main_stop_app">终止程序扫描</string>
    <string name="main_update">升级</string>
    <string name="main_get_free_count_success">领取成功</string>
    <string name="main_please_click_ad_again">请再次点击广告！</string>

    <!--照片编辑-->
    <string name="image_edit_finish">完成</string>

    <!--识别失败-->
    <string name="ocr_error">识别失败，您需要提供一张字迹清晰，工整的图片！</string>
    <string name="ocr_error2">识别失败，您需要提供一张字迹清晰，工整的图片，并检查手机时间是否正确！</string>

    <!--User System-->
    <string name="get_ocr_times">对不起，您今天已经领了哦！</string>
    <string name="get_ocr_time_tip">您仍有剩余次数可以用，请先使用完剩余次数再领取！</string>
    <string name="get_ocr_time_by_ad">恭喜您获得了%s次！通过看广告能够再次获取次数哦！</string>

    <!--update-->
    <string name="update_title">更新</string>
    <string name="update_send">发送</string>
    <string name="update_version_code_hint">设置版本号（如：10000）</string>
    <string name="update_version_name_hint">设置版本名字（如：V1.0.0）</string>
    <string name="update_type_hint">0：半强制  1：强制</string>
    <string name="update_content_hint">更新内容,(1.XXXXX,2.XXXX,3.XXXX注意以逗号间隔每条)</string>
    <string name="update_version_code_tip">版本号不能为null</string>
    <string name="update_version_name_tip">版本名不能为null</string>
    <string name="update_type_tip">更新类型不能为null</string>
    <string name="update_content_tip">更新内容不能为null</string>
    <string name="update_success">提交成功</string>
    <string name="update_failed">提交失败</string>
    <string name="update_sure">确定</string>

    <!--结果页面-->
    <string name="result_share_content">分享文本到...</string>
</resources>
